# cray-dvs

./: .clang-format  .cray-obs-config.xml  .gitignore  Jenkinsfile  Makefile.am  README  configure.ac  contributions.md  cray-dvs-kernel-package  cray-dvs.pc.in  cray-dvs.spec  install.md  limitations.md  module.in  preamble  readme.md
cray/: .gitignore  Makefile  readme.md  setup_files.sh  setup_sles12sp3_vm.sh  setup_sles15sp0_vm.sh  terraform.tf  tmux.sh  vars.tf
cray/lustre/: Jenkinsfile  build_lustre.sh  make-lustre-great-again.patch  readme.md  terraform.tf  vars.tf
docs/: readme.md
include/: Makefile.am
include/common/: dvs_dev_ioctl.h  dvsproc_node.h  dvsproc_stat.h  dvsproc_test.h  dvsproc_timing_stat.h  estale_retry.h  log.h  resource.h  ssi_proc.h  ssi_sysctl.h  sync.h  sys_setup.h  usierrno.h  usifunc.h
include/common/kernel/: dvsfs.h  fcntl_desc.h  fnv_hash.h  hash_table.h  ioctl_desc.h  ipc_api.h  kernel_interface.h  ssi_util_init.h  usicontext.h  usiipc.h  usisyscall.h
include/dvs/: dvs_config.h  dvs_ioctl.h  dvs_lnetconfig.h  usifile.h  usisuper.h  vfsops.h
include/dvs/kernel/: usifile.h  usifileproto.h  usisuper.h
kernel/: Makefile  readme.md  sym_exp  sym_req
kernel/dvscommon/: dvscommon.c  hash_table.c  knodemap.c  syscall.c
kernel/dvsipc/: README  ipc.c
kernel/dvsipc/dvsipc_hal/: dvsipc.c  dvsipc.h  dvsipc_lnet.c  dvsipc_msg_queue.c  dvsipc_msg_queue.h  dvsipc_portals.c  dvsipc_threads.c  dvsipc_threads.h
kernel/dvsof/: README  dvs_sync.c  dvsofclient.c  dvsofserver.c  ioctl_desc.c
kernel/dvspn/: README  dvspnclient.c
kernel/dvsproc/: README  dvs_log.c  dvsproc_stat.c  dvsproc_test.c  dvsproc_timing_stat.c  ssi_proc.c  ssi_sysctl.c  sys_setup.c
kernel/dvsutil/: README  ssi_util_init.c
man/: Makefile.am
man/man5/: Makefile.am  dvs.5.xml
scripts/: Makefile.am  dvs.cnl.in  dvs.in  functions.in  make-nodemap.sh
scripts/80cray-ansible-dvs/: module-setup.sh
scripts/80cray-dvs/: module-setup.sh
scripts/modprobed/: dvs-private.conf  dvs.conf
test/: Makefile  README.md  lib.sh  readme.md  sharness  t1000-sys-fs-dvs-patches.patch  t1000-sys-fs-dvs-patches.t  t1001-sys-fs-dvs-patches-test.patch  t1001-sys-fs-dvs-patches-test.t  t1002-limit-dvs-resources.patch  t9999-bonnie.t  t9999-iozone.t  test_fstest.sh  test_template.sh
test/ioperf/: Makefile.am  README  ioperf.c  output.txt  run_service
test/unittest/: Makefile.am  README.md  common.c  common.h  regression_test.py  test_common.c  test_common.sh  test_rdwr_mmap.c  test_read_file.c  test_read_mmap.c  test_request_log.sh  test_spinlock_perf.c  test_stats.c  test_write_file.c  test_write_mmap.c  test_write_random.c
test/xattr/xattr_stress/: Makefile.am  xattr_stress.c
userspace/: Makefile.am  dvs_thread_generator.c
