#
# Copyright Cray Inc. All Rights Reserved
#

noinst_HEADERS = common/kernel/fnv_hash.h \
                 common/kernel/hash_table.h \
                 common/kernel/ioctl_desc.h \
                 common/kernel/kernel_interface.h \
                 common/kernel/ssi_util_init.h \
                 common/kernel/usicontext.h \
                 common/kernel/usiipc.h \
                 common/kernel/usisyscall.h \
                 common/kernel/ipc_api.h \
                 common/resource.h \
                 common/ssi_proc.h \
                 common/dvsproc_node.h \
                 common/ssi_sysctl.h \
                 common/usierrno.h \
                 common/usifunc.h \
                 common/log.h \
                 common/sync.h \
                 common/estale_retry.h \
                 dvs/kernel/usifile.h \
                 dvs/kernel/usifileproto.h \
                 dvs/kernel/usisuper.h \
                 dvs/usisuper.h

include_HEADERS = dvs/dvs_ioctl.h \
                  common/kernel/ipc_api.h \
                  common/kernel/ssi_util_init.h \
                  common/dvsproc_node.h \
                  common/usifunc.h
